--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -39,6 +39,6 @@ spring:
       driver-class-name: org.postgresql.Driver
   batch:
     jdbc:
-      initialize-schema: never
+      initialize-schema: always
     job:
       enabled: false # 기본실행 안되게
