--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,13 @@
             <artifactId>xstream</artifactId>
             <version>1.4.16</version>
         </dependency>
+
+        <!--  JPA      -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
