* multi-threaded - 사이즈 100개씩 단위 - 각 스레드마다 100개를 처리하는 것임 - 스레드가 4개라면 400개 read, 400 process 이런식으로 처리 - jdbcPagingReader가 Thread safe 보장함

--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,12 @@
             <version>2.3.0</version>
         </dependency>
 
+        <!--  async 작업을 위한      -->
+        <dependency>
+            <groupId>org.springframework.batch</groupId>
+            <artifactId>spring-batch-integration</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
