quartz를 활용한 배치 예제
- 스케줄러 형태만 잡아놨음
- api, file용 스케줄러
- file용에서 args로 requestDate 하나 받음

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -46,4 +46,4 @@ spring:
 #      table-prefix: BATCH_  # 테이블 프리픽스(기본 BATCH_)
     job:
       names: ${job.name:NONE}
-#      enabled: false # 기본실행 안되게
+      enabled: false # 기본실행 안되게
